--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsdom": "^26.1.0",
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
