--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdf-text-extract": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
